--- a/config/package.json
+++ b/config/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.16.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^6.0.1",
@@ -22,8 +23,8 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack --watch"
+    "build": "../node_modules/.bin/webpack",
+    "start": "../node_modules/.bin/webpack --watch"
   },
   "repository": {
     "type": "git",
